# ideabank

./: README.md
code-tidy/: README.md
flask-create/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
flask-create/docs/: conf.py  index.rst
flask-create/src/flask_create/: cli.py  generator.py
flask-create/src/flask_create.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flask-create/src/flask_create/templates/: README.md.j2  app.py.j2  models.py.j2  requirements.txt.j2
flask-create/src/flask_create/templates/flask_templates/: index.html.j2
flask-create/src/flask_create/templates/routes/: sample.py.j2
flask-create/tests/: conftest.py  test_skeleton.py
food-health-rating/: README.md
food-health-rating/docs/: algorithm-documentation.md  health scoring logic.md  scoring algorithm.py
read-with-friends/docs/: Competitive Analysis  Critic.md  Legal.md  MVP.md  README.md
